--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>LA’s enigmatic new resident</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://prod-waitlist-widget.s3.us-east-2.amazonaws.com/getwaitlist.min.css" />
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="https://prod-waitlist-widget.s3.us-east-2.amazonaws.com/getwaitlist.min.js"></script>
     <script defer crossorigin="anonymous" src="https://kit.fontawesome.com/0bef9420dc.js"></script>
     <script defer src="scripts.js"></script>
   </head>
@@ -52,7 +54,7 @@
       <div id="stack">
         <h1>Ready to get out in to the wild?</h1>
         <h2>Let Bigfoot make your best day ever.</h2>
-        <div>widget goes here <button>Get Early Access</button></div>
+        <div id="getWaitlistContainer" data-waitlist_id="6600"></div>
         <div id="watch">Watch the video <i class="fa-light fa-circle-play"></i></div>
         <a href="#">Have an early access code?</a>
       </div>
