--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     </div>
     <div id="banner">
       <div id="stack">
-        <h1>Ready to get out in to the wild?</h1>
-        <h2>Let Bigfoot make your best day ever.</h2>
+        <h1>Ready to get out in the wild?</h1>
+        <h2>With a little AI mixed with magic, let Bigfoot plan your best day ever.</h2>
         <div id="getWaitlistContainer" data-waitlist_id="6600"></div>
         <div id="watch">Watch the video <i class="fa-light fa-circle-play"></i></div>
         <a href="#">Have an early access code?</a>
