sudo make sexier

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script defer src="https://prod-waitlist-widget.s3.us-east-2.amazonaws.com/getwaitlist.min.js"></script>
     <script defer crossorigin="anonymous" src="https://kit.fontawesome.com/0bef9420dc.js"></script>
+    <script defer src="https://unpkg.com/scrollreveal@4.0.7"></script>
     <script defer src="scripts.js"></script>
   </head>
   <body>
@@ -59,7 +60,12 @@
         <a href="#">Have an early access code?</a>
       </div>
       <div id="illo">
-        <img src="https://res.cloudinary.com/bigfoot-cdn/image/upload/v1682547555/demo/daybreaker-promo_wwb5vz.png" />
+        <video
+          autoplay
+          muted
+          src="https://res.cloudinary.com/bigfoot-cdn/video/upload/v1682692585/demo/original-5d5c76ae8d3beef1601733f3accaecd5_sk6tge.mp4"
+        ></video>
+        <!-- <img src="https://res.cloudinary.com/bigfoot-cdn/image/upload/v1682547555/demo/daybreaker-promo_wwb5vz.png" /> -->
       </div>
     </div>
     <div id="section">
