Stub below the fold, make responsive

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
       </svg>
       <!-- <div class="nav-button" data-page="chat"><i class="fa-solid fa-comment-alt"></i> Chat</div> -->
       <div class="fill"></div>
-      <div class="nav-button" data-page="search"><i class="fa-solid fa-search"></i> Search</div>
-      <div class="nav-button" data-page="signup">Log in</div>
+      <a class="nav-button" data-page="search" href="https://www.meetbigfoot.com/cities/los-angeles/search"
+        ><i class="fa-solid fa-search"></i> Search</a
+      >
+      <a class="nav-button" data-page="signup" href="https://www.meetbigfoot.com/login">Log in</a>
     </div>
     <div id="banner">
       <div id="stack">
@@ -69,11 +71,22 @@
       </div>
     </div>
     <div id="section">
-      <h2>Bigfoot LA Uncovered</h2>
-      <a href="#">show all</a>
-      <div id="cards">cards go here</div>
+      <div class="center">
+        <div class="row">
+          <h2>Bigfoot LA Uncovered</h2>
+          <div class="fill"></div>
+          <a href="https://www.meetbigfoot.com/cities/los-angeles">show all</a>
+        </div>
+        <div id="cards">
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+      </div>
     </div>
-    <div>© 2023 YourYeti, Inc.</div>
+    <div id="footer">© 2023 YourYeti, Inc.</div>
     <div id="popup">
       <div id="softbox"></div>
     </div>
