Fix autoplay and mobile sizing

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <video
           autoplay
           muted
+          playsinline
           src="https://res.cloudinary.com/bigfoot-cdn/video/upload/v1683137674/demo/littlefoot-teaser-draft-2-compressed_qadeai.mp4"
         ></video>
       </div>
