--- a/index.html
+++ b/index.html
@@ -58,37 +58,18 @@
         <h1>Ready to get out in the wild?</h1>
         <h2>With a little AI mixed with magic, let Bigfoot plan your best day ever.</h2>
         <div id="getWaitlistContainer" data-waitlist_id="6600"></div>
-        <div id="watch">Watch the video <i class="fa-light fa-circle-play"></i></div>
-        <a href="#">Have an early access code?</a>
       </div>
       <div id="illo">
         <video
           autoplay
+          controls
           muted
           playsinline
           src="https://res.cloudinary.com/bigfoot-cdn/video/upload/v1683137674/demo/littlefoot-teaser-draft-2-compressed_qadeai.mp4"
         ></video>
       </div>
     </div>
-    <div id="section">
-      <div class="center">
-        <div class="row">
-          <h2>Bigfoot LA Uncovered</h2>
-          <div class="fill"></div>
-          <a href="https://www.meetbigfoot.com/cities/los-angeles">show all</a>
-        </div>
-        <div id="cards">
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-        </div>
-      </div>
-    </div>
+    <!-- <iframe src=https://www.meetbigfoot.com/cities/los-angeles"></ifram> -->
     <div id="footer">© 2023 YourYeti, Inc.</div>
-    <div id="popup">
-      <div id="softbox"></div>
-    </div>
   </body>
 </html>
