Add content cards

--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
         ></video>
       </div>
     </div>
+    <div id="section">
+      <div class="center">
+        <div class="row">
+          <h2>Bigfoot LA Uncovered</h2>
+          <div class="fill"></div>
+          <a href="https://www.meetbigfoot.com/cities/los-angeles">show all</a>
+        </div>
+        <div id="cards"></div>
+      </div>
+    </div>
     <!-- <iframe src=https://www.meetbigfoot.com/cities/los-angeles"></ifram> -->
     <div id="footer">© 2023 YourYeti, Inc.</div>
   </body>
