Resize video to square crop

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           controls
           muted
           playsinline
-          src="https://res.cloudinary.com/bigfoot-cdn/video/upload/q_auto/v1683320132/demo/bigfoot-la-teaser-4_lrnor8.mp4"
+          src="https://res.cloudinary.com/bigfoot-cdn/video/upload/ar_1,c_crop,q_auto/v1683320132/demo/bigfoot-la-teaser-4_lrnor8.mp4"
         ></video>
       </div>
     </div>
