--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LA’s enigmatic new resident</title>
+    <title>Bigfoot - Your personal AI fun hunter</title>
+    <meta
+      name="description"
+      content="Be the first to join the waitlist to have your best weekends ever magically planned for you!"
+    />
+    <meta
+      name="image"
+      content="https://res.cloudinary.com/bigfoot-cdn/image/upload/q_auto/v1684344327/marketing/meetbigfoot.la-thumb-1_inywtj.png"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bigfoot - Your personal AI fun hunter" />
+    <meta
+      name="twitter:description"
+      content="Be the first to join the waitlist to have your best weekends ever magically planned for you!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/bigfoot-cdn/image/upload/q_auto/v1684344327/marketing/meetbigfoot.la-thumb-1_inywtj.png"
+    />
+    <meta property="og:title" content="Bigfoot - Your personal AI fun hunter" />
+    <meta
+      property="og:description"
+      content="Be the first to join the waitlist to have your best weekends ever magically planned for you!"
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/bigfoot-cdn/image/upload/q_auto/v1684344327/marketing/meetbigfoot.la-thumb-1_inywtj.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://prod-waitlist-widget.s3.us-east-2.amazonaws.com/getwaitlist.min.css" />
     <link rel="stylesheet" href="styles.css" />
@@ -69,7 +96,7 @@
         ></video>
       </div>
     </div>
-    <div id="section">
+    <!-- <div id="section">
       <div class="center">
         <div class="row">
           <h2>Bigfoot LA Uncovered</h2>
@@ -78,8 +105,7 @@
         </div>
         <div id="cards"></div>
       </div>
-    </div>
-    <!-- <iframe src=https://www.meetbigfoot.com/cities/los-angeles"></ifram> -->
+    </div> -->
     <div id="footer">© 2023 YourYeti, Inc.</div>
   </body>
 </html>
