Prioritize OpenGraph tags, add two more

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
       name="image"
       content="https://res.cloudinary.com/bigfoot-cdn/image/upload/q_auto/v1684344327/marketing/meetbigfoot.la-thumb-1_inywtj.png"
     />
+    <meta property="og:title" content="Bigfoot - Your personal AI fun hunter" />
+    <meta
+      property="og:description"
+      content="Be the first to join the waitlist to have your best weekends ever magically planned for you!"
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/bigfoot-cdn/image/upload/q_auto/v1684344327/marketing/meetbigfoot.la-thumb-1_inywtj.png"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://meetbigfoot.la/" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Bigfoot - Your personal AI fun hunter" />
     <meta
@@ -18,15 +29,6 @@
     />
     <meta
       name="twitter:image"
-      content="https://res.cloudinary.com/bigfoot-cdn/image/upload/q_auto/v1684344327/marketing/meetbigfoot.la-thumb-1_inywtj.png"
-    />
-    <meta property="og:title" content="Bigfoot - Your personal AI fun hunter" />
-    <meta
-      property="og:description"
-      content="Be the first to join the waitlist to have your best weekends ever magically planned for you!"
-    />
-    <meta
-      property="og:image"
       content="https://res.cloudinary.com/bigfoot-cdn/image/upload/q_auto/v1684344327/marketing/meetbigfoot.la-thumb-1_inywtj.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
