Put the cards back for comparison

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         ></video>
       </div>
     </div>
-    <!-- <div id="section">
+    <div id="section">
       <div class="center">
         <div class="row">
           <h2>Bigfoot LA Uncovered</h2>
@@ -108,7 +108,7 @@
         </div>
         <div id="cards"></div>
       </div>
-    </div> -->
+    </div>
     <div id="footer">© 2023 YourYeti, Inc.</div>
   </body>
 </html>
